--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,8 @@ cache:
   paths:
     - node_modules/
 
-test_async:
+build:
   script:
     - npm install
-    - node ./specs/start.js ./specs/async.spec.js
+    - npm run build
 
